syntax = "proto3";

package envoy.extensions.filters.listener.reverse_connection.v3alpha;

import "google/protobuf/wrappers.proto";

import "udpa/annotations/status.proto";
import "udpa/annotations/versioning.proto";

option java_package = "io.envoyproxy.envoy.extensions.filters.listener.reverse_connection.v3alpha";
option java_outer_classname = "ReverseConnectionProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/filters/listener/reverse_connection/v3alpha";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Reverse Connection Filter]
// PROXY protocol listener filter.
// [#extension: envoy.filters.listener.reverse_connection]

message ReverseConnection {
  option (udpa.annotations.versioning).previous_message_type =
      "envoy.config.filter.listener.reverse_connection.v2.ReverseConnection";

  google.protobuf.UInt32Value ping_wait_timeout = 1;
}
